# widget_1_homework

./: .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: README.md  decorators.py  external_api.py  file_reader.py  generators.py  logger_config.py  main.py  masks.py  operations_filter.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_file_reader.py  test_generators.py  test_masks.py  test_operations_filter.py  test_processing.py  test_utils.py  test_widget.py
